# Robotics

./: README.md
RosCarlaDrone-main/RosCarlaDrone-main/: READ.md
RosCarlaDrone-main/RosCarlaDrone-main/PathControl/: drone_mov.py  pid.py  trajectory.py
RosCarlaDrone-main/RosCarlaDrone-main/exploration_stack_2D/carla-ros-bridge/src/: .rosinstall.bak
RosCarlaDrone-main/RosCarlaDrone-main/exploration_stack_2D/carla-ros-bridge/src/uav_nav/: package.xml
RosCarlaDrone-main/RosCarlaDrone-main/exploration_stack_2D/carla-ros-bridge/src/uav_nav/config/: costmap_common_params.yaml  local_planner_params.yaml
RosCarlaDrone-main/RosCarlaDrone-main/exploration_stack_2D/carla-ros-bridge/src/uav_nav/launch/: move_base_2D.launch
RosCarlaDrone-main/RosCarlaDrone-main/exploration_stack_3D/carla-ros-bridge/catkin_ws/src/: .rosinstall
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/plankton_utils/share/plankton_utils/: package.bash  package.zsh
ros2_ws/src/install/uuv_control_msgs/share/uuv_control_msgs/: package.bash  package.zsh
ros2_ws/src/install/uuv_gazebo/share/uuv_gazebo/: package.bash  package.zsh
ros2_ws/src/install/uuv_gazebo_plugins/share/uuv_gazebo_plugins/: package.bash  package.zsh
ros2_ws/src/install/uuv_gazebo_ros_plugins_msgs/share/uuv_gazebo_ros_plugins_msgs/: package.bash  package.zsh
ros2_ws/src/sam_bot_description/: package.xml
ros2_ws/src/sam_bot_description/launch/: display.launch.py
ros2_ws/src/sam_bot_description/src/description/: sam_bot_description.urdf
(+70 files in other folders)
