<?xml version="1.0"?>
<package format="2">
  <name>uav_nav</name>
  <version>0.0.0</version>
  <description>The uav_nav package</description>

  <maintainer email="mbari@todo.todo">mbari</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

<depend>teb_local_planner</depend>


  <export>


  </export>
</package>
